ATTENTION2: The missionsave table in the Domination sql database has changed, either execute DAddColumn_d_vrespawn_vecs_4_39.sql (in Heidi for example) or make the changes yourself 

- Added: Force streamfriendlyui through param, by Longtimegamer
- Changed: In the non TT versions the positions of the default Domination base vehicles and all bonus vehicles is now saved to missionsave too, if those vehicles are alive and more than 700 meters away from base
           Additionally, if an ammobox is loaded is saved too and if MHQs are deployed is also saved
- Changed: Enemy AI CAS now adjust firing position if player has moved
- Changed: Main target sidemission non AI objects must now also be destroyed by satchels
- Changed: Refactored building selection for garrisoned enemies, by Longtimegamer
- Fixed: Database mission progress autosave (already in the 4.38 reupload at GitHub)
- Fixed: Revive spectating was using missionnamespace var name for unit reference which sometimes doesn't return anything; switched to UID
- Fixed: If a mash got destroyed (or a FARP) then the marker was not removed correctly
- Fixed: Call CAS was broken because of a wrong variable name
- Fixed: Class rhsgref_BRDM2_ATGM_msv no longer exists in RHS leading to script errors during vehicle creation
- Fixed: Don't delete uniform, vest, headgear or backpack if players ends up with none of them when Virtual Arsenal gets closed
- Fixed: Number of units did get reduced for paratroopers over main targets when d_smallgrps was on
- Fixed: Vanilla Altis OPFOR version was broken, d_allmen_W was not defined at all
- Fixed: Create a unique group for each civ module isntead of using the same group, by longtimegamer
- Fixed: Fix CUP BLUFOR air taxis by using different aircraft, by jlillis
- Fixed: Don't throw an error if the number of d_target_x is not the same in the mission as in the save
- Updated: Russian translation by Babayka
 