@@ -141,6 +141,8 @@ if (_data != "" && {_mravailable || {_data == "D_BASE_D" || {_leadavailable || {
 
 if (!isNil "xr_pl_no_lifes" && {xr_pl_no_lifes && {ctrlEnabled __CTRL(100102)}}) then {
 	__CTRL(100102) ctrlEnable false;
+	__CTRL(123321) ctrlEnable false;
+	__CTRL(1500) ctrlEnable false;
 };
 if (!xr_respawn_available && {ctrlEnabled __CTRL(100102)}) then {
 	__CTRL(100102) ctrlEnable false;
